--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Team-Miranda/ProductsAPI#readme",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.15",
     "pg": "^8.7.1"
   }
