--- a/test.yml
+++ b/test.yml
@@ -1,23 +1,20 @@
 config:
   target: "http://localhost:3001"
   phases:
-    - duration: 60
+    - duration: 30
       arrivalRate: 5
-      rampTo: 25
+      rampTo: 50
       name: Warm up
-    - duration: 120
-      arrivalRate: 25
+    - duration: 30
+      arrivalRate: 50
       rampTo: 100
       name: Ramp up load
-    - duration: 300
+    - duration: 120
       arrivalRate: 100
-      rampTo: 500
       name: Sustained load
 
 scenarios:
   - name: "Get requests"
     flow:
       - get:
-          url: "/products/{{$randomNumber(1,10000)}}"
-      - get:
-          url: "/products/{{$randomNumber(1,10000)}}/related"
+          url: "/products/{{$randomNumber(9000,10000)}}/styles"
