--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "artillery quick --count 10 -n 20 http://localhost:3001/products",
-    "start": "node ./server"
+    "start": "nodemon ./server"
   },
   "repository": {
     "type": "git",
