--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "memcached": "^2.2.2",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.15",
